--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -9,22 +9,24 @@
   }
 
   .department-title {
-    font-size: 24px;
-    background-color: #fff;
-    color: rgba(25,46,89,255);
+    font-size: 20px;
+    background-color: #198754;
+    color: #fff;
+    padding: 6px;
+    border-radius: 5px;
   }
 
   .firstend{
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    
+
   }
 
   .lastend{
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
   }
-  
+
   .table th {
     text-align: center;
     vertical-align: middle;
@@ -60,13 +62,30 @@
     line-height: 1.5;
   }
 
-  .table {
+  .section-title {
+     margin-bottom: 40px;
+   }
+
+   .team .member {
+     padding: 40px;
+   }
+
+   .table {
+    margin-bottom: 40px;
     border-spacing: 10px 20px;
   }
 
   .details-btn {
      --bs-btn-line-height: 1;
      --bs-btn-font-size: 0.75rem;
+     background-color: #192f59;
+     color: #fff;
+     margin: 2px;
+  }
+
+  .details-btn:hover {
+    background-color: #192f59;
+    color: #fff;
   }
 
 
@@ -95,17 +114,17 @@
             <tr style="line-height: 10%;">
               <td style="width:0.7%; "> <%= index + 1 %> </td>
               <td style="width:5%; text-align: left;"> <%= faculty.name %> </td>
-              
-              <td style="width:2%;"> <%= faculty.department.name %> </td>
-              <td style="width:2%;"> <%= faculty.landline_office %> </td>
-              <td style="width:1%; text-align: center;">
+
+              <td style="width:8%;"> <%= faculty.department.name %> </td>
+              <td style="width:3%;"> <%= faculty.landline_office %> </td>
+              <td style="width:2%; text-align: center;">
                 <!-- Button to trigger Bootstrap modal -->
-                <button type="button" class="btn btn-success details-btn" data-bs-toggle="modal" data-bs-target="#facultyModal<%= faculty.id %>">
+                <button type="button" class="btn details-btn" data-bs-toggle="modal" data-bs-target="#facultyModal<%= faculty.id %>">
                   Click here
                 </button>
 
-               
-              
+
+
 
 
             <div class="modal fade" id="facultyModal<%= faculty.id %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
