--- a/app/views/faculties/_filter_form.html.erb
+++ b/app/views/faculties/_filter_form.html.erb
@@ -25,7 +25,7 @@
   background-color: #192f59;
   color: #fff;
   border: 1px solid #fff;
-  border-radius: 0 5px 0 5px;
+  border-radius: 0 5px 0
   border-top: none;
   border-right: none;
   transition: background-color 0.3s ease;
@@ -50,7 +50,7 @@
   </div>
 
   <div class="col-md-4 col-sm-12" id="filterrific_with_department_id" style="margin: 30px 0px 24px 0px; display:none;">
-    <%= f.select :with_department_id_advanced, [['All sections', nil]] + @filterrific.select_options[:with_department_id], { style: 'text-decoration: none;' }, class: "form-select" %>
+    <%= f.select :with_department_id_advanced, [['All sections', nil]] + @filterrific.select_options[:with_department_id], { style: 'text-decoration: none;' }, class: "form-select" %>                                                                            
   </div>
 
   <!-- Search Button -->
