--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -15,7 +15,7 @@
 
   <div class="contents">
     <div class="contents-list">
-      <% sorted_units = Unit.all.order(:title) %>
+      <% sorted_units = Unit.all %>
       <% sorted_units.each do |unit| %>
         <div class="accordion">
           <label class="accordion-label" tabindex="0"><%= unit.title %></label>
