--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -11,7 +11,15 @@
     <div class="telephone-header">
       TELEPHONE DIRECTORY
     </div>
-  </header>
+
+
+  <div id="reset-filters-btn-container">
+<button type="button" id="reset-filters-btn" class="btn" onclick="resetFilters()">Home</button>
+
+</div>
+<%= button_to 'Contact Us', home_team_path, class: "btn btn-secondary" %>
+</header>
+
 
   <div class="contents">
     <div class="contents-list">
