--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -49,7 +49,7 @@
     </div>
     <div class="search-area">
       <div class="search-header">
-        <div class="rounded text-body-emphasis" style="width:100%;background-color:#192f59;">
+        <div class="rounded text-body-emphasis" style="width:100%; height:70px !important; background-color:#192f59;">
           <p class="lead mb-0" style="color:white;"><a href="#" class="text-body-emphasis fw-bold"><%= render 'filter_form' %></a></p>
         </div>
       </div>
