Trying to make mobile responsive

--- a/app/assets/stylesheets/loginpage.css
+++ b/app/assets/stylesheets/loginpage.css
@@ -99,6 +99,16 @@ p {
   font-size: 20px;
 }
 
+.row::after {
+  display: none; /* Hide the separator line for smaller screens */
+}
+
+p {
+  color: rgba(25, 46, 89, 255);
+  font-size: 20px;
+}
+
+
 @media screen and (max-width: 768px) {
   .image {
     flex:0;
@@ -112,25 +122,4 @@ p {
   .form {
     min-width:auto;
   }
-
-
-  body, html {
-  overflow:auto;
-  }
-  @media screen and (max-width: 768px) {
-  .image {
-    display: none; /* Hide the image for smaller screens */
-  }
-
-  .form-container {
-    flex: 1;
-    padding: 5vh;
-  }
-
-  .form {
-    min-width: unset; /* Reset min-width for responsiveness */
-  }
-
-  
-}
 }
