--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -214,3 +214,30 @@ ul.tree li:last-child:before {
 .accordion-container {
   overflow-y: scroll;
 }
+
+.telephone-header {
+  justify-content: center !important;
+  width: 100vw;
+  padding-left: 10%;
+}
+
+   
+.overlay {
+  display: flex;
+  flex-direction: row;
+  right: 0;
+  align-items: center;
+}
+
+.home-link {
+  white-space: nowrap;
+  align-items: center;
+}
+
+.overlay-home {
+  flex: 1;
+}
+
+.overlay-contact {
+  flex: 1;
+}
