--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -11,9 +11,15 @@
     <div class="telephone-header">
       TELEPHONE DIRECTORY
     </div>
-
+    <div class="overlay">
+        <div class="overlay-home">
+        <%= link_to 'Home', 'http://telephone.nitk.ac.in', class: "nav-link px-2 text-body-secondary home-link" %> 
+        </div>
+        <div class="overlay-contact">
+          <%= link_to 'Contact Us', home_team_path, class: "nav-link px-2 text-body-secondary home-link" %>
+        </div>
+    </div>
   </header>
-
 </div>
 
 
