--- a/app/views/faculties/_filter_form.html.erb
+++ b/app/views/faculties/_filter_form.html.erb
@@ -49,7 +49,7 @@
     <%= f.text_field :search_query, placeholder: "Search Name", class: "form-control", id: "filterrific_submit_button" %>
   </div>
 
-  <div class="col-md-4 col-sm-12" id="filterrific_with_department_id" style="margin: 30px 0px 24px 0px; display:none;">
+  <div class="col-md-4 col-sm-12" id="filterrific_with_department_id" style="margin: 30px 0px 24px 0px;">
     <%= f.select :with_department_id_advanced, [['All sections', nil]] + @filterrific.select_options[:with_department_id], { style: 'text-decoration: none;' }, class: "form-select" %>
   </div>
 
@@ -59,9 +59,9 @@
   </div>
 
   <!-- Advanced Search Button -->
-  <div class="col-md-2 col-sm-12" style="margin: 30px 0px 0px !important">
+  <!-- <div class="col-md-2 col-sm-12" style="margin: 30px 0px 0px !important">
     <button type="button" id="advanced-search-btn" class="btn btn-success" style="padding: 6px 12px; margin: 0px;">Advanced Search</button>
-  </div>
+  </div> -->
 
   <!-- Advanced Search fields -->
   <div class="col-md-4 col-sm-6" id="filterrific_search_designation" style= "display:none;">
@@ -125,6 +125,6 @@
 
     if ( departmentId ) {
       resetButtonContainer.style.display = 'block';
-    } 
+    }
   }
 </script>
