--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -171,7 +171,7 @@
           <div class="row">
             <div class="col-lg-6 mx-auto mt-4">
               <div class="member d-flex align-items-start">
-                <%= image_tag('mr-br-chandravarkar.jpg', class: 'teampic img-fluid', alt: 'faculty advisor') %>
+                <%= image_tag('DrBRC.jpeg', class: 'teampic img-fluid', alt: 'faculty advisor') %>
                 <div class="member-info">
                   <h4>Dr. B R Chandavarkar</h4>
                   <span>Associate Professor</span>
@@ -185,14 +185,14 @@
             </div>
           <br>
             <!-- Staff -->
-            <div class="section-title">                                                                                  
+            <div class="section-title">
               <h3>Staff</h3>
               <div class="underline"></div>
             </div>
 
             <div class="col-lg-6 mx-auto mt-4">
               <div class="member d-flex align-items-start">
-                <%= image_tag('mr-br-chandravarkar.jpg', class: 'teampic img-fluid', alt: 'staff') %>
+                <%= image_tag('dummy.webp', class: 'teampic img-fluid', alt: 'staff') %>
                 <div class="member-info">
                   <h4>Dr. B R Chandavarkar</h4>
                   <span>Associate Professor</span>
