--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -38,6 +38,12 @@ img{
   width:100%;
 }
 
+@media only screen and (max-width: 800px) {
+  .contents {
+    flex-direction: column;
+  }
+}
+
 .contents-list{
   display: flex;
   flex: 1;
