--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -162,6 +162,27 @@
             <div class="underline"></div>
           </div>
 
+          <div class="section-title">
+            <h3>Director</h3>
+            <div class="underline"></div>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-6 mx-auto mt-4">
+              <div class="member d-flex align-items-start">
+                <%= image_tag('Director.jpg', class: 'teampic img-fluid', alt: 'faculty advisor' , style: "border-radius:0px;") %>
+                <div class="member-info">
+                  <h4>Prof. B Ravi </h4>
+                  <span>Director NITK</span>
+                  <div class="social align-items-center">
+                    <a href=""><i class="bi bi-github"></i></a>
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <br>
+
           <!-- Faculty Advisor -->
           <div class="section-title">
             <h3>Faculty Advisor</h3>
@@ -194,8 +215,8 @@
               <div class="member d-flex align-items-start">
                 <%= image_tag('dummy.webp', class: 'teampic img-fluid', alt: 'staff') %>
                 <div class="member-info">
-                  <h4>Dr. B R Chandavarkar</h4>
-                  <span>Associate Professor</span>
+                  <h4>Mr. Santosh</h4>
+                  <span>Technical Staff</span>
                   <span>Dept. of CSE</span>
                   <div class="social align-items-center">
                     <a href=""><i class="bi bi-github"></i></a>
