--- a/app/views/faculties/_footer.html.erb
+++ b/app/views/faculties/_footer.html.erb
@@ -2,7 +2,7 @@
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><%= link_to 'Home', 'http://telephone.nitk.ac.in', class: "nav-link px-2 text-body-secondary" %></li>
       <li class="nav-item"><%= link_to 'Contact Us', home_team_path, class: "nav-link px-2 text-body-secondary" %></li>
-      
+
     </ul>
-    <p class="text-center text-body-secondary">Made with ❤️ by <b> Devs 'N' Revs Team </b></p>
+    <p class="text-center text-body-secondary">Copyright All Rights Reserved 2024 @NITK Surathkal</p>
   </footer>
