--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -195,7 +195,7 @@
                 <%= image_tag('DrBRC.jpeg', class: 'teampic img-fluid', alt: 'faculty advisor') %>
                 <div class="member-info">
                   <h4>Dr. B R Chandavarkar</h4>
-                  <span>Associate Professor</span>
+                  <span>Professor In-charge</span>
                   <span>Dept. of CSE</span>
                   <div class="social align-items-center">
                     <a href=""><i class="bi bi-github"></i></a>
