--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -185,7 +185,7 @@
 
           <!-- Faculty Advisor -->
           <div class="section-title">
-            <h3>Faculty Advisor</h3>
+            <h3>Professor In-charge</h3>
             <div class="underline"></div>
           </div>
 
@@ -195,7 +195,7 @@
                 <%= image_tag('DrBRC.jpeg', class: 'teampic img-fluid', alt: 'faculty advisor') %>
                 <div class="member-info">
                   <h4>Dr. B R Chandavarkar</h4>
-                  <span>Professor In-charge</span>
+                  <span>Associate Professor</span>
                   <span>Dept. of CSE</span>
                   <div class="social align-items-center">
                     <a href=""><i class="bi bi-github"></i></a>
