--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -162,7 +162,7 @@
             <div class="underline"></div>
           </div>
 
-          <div class="section-title">
+          <div class="section-title mt-5">
             <h3>Director</h3>
             <div class="underline"></div>
           </div>
@@ -184,7 +184,7 @@
           <br>
 
           <!-- Faculty Advisor -->
-          <div class="section-title">
+          <div class="section-title mt-5">
             <h3>Professor In-charge</h3>
             <div class="underline"></div>
           </div>
@@ -206,7 +206,7 @@
             </div>
           <br>
             <!-- Staff -->
-            <div class="section-title">
+            <div class="section-title mt-5">
               <h3>Staff</h3>
               <div class="underline"></div>
             </div>
