--- a/app/views/home/team.html.erb
+++ b/app/views/home/team.html.erb
@@ -162,7 +162,7 @@
             <div class="underline"></div>
           </div>
 
-          <div class="section-title mt-5">
+          <div class="section-title">
             <h3>Director</h3>
             <div class="underline"></div>
           </div>
