--- a/app/views/faculties/_filter_form.html.erb
+++ b/app/views/faculties/_filter_form.html.erb
@@ -53,6 +53,19 @@
   color: #ffF;
   }
 
+@media only screen and (max-width: 767px) {
+    /* Additional styles for mobile responsiveness */
+    #advanced-search-btn {
+      width: 100%; /* Make the button take full width on smaller screens */
+      margin-top: 10px; /* Adjust margin for spacing */
+    }
+
+    /* Show the advanced search fields on mobile */
+    #filterrific_search_designation,
+    #filterrific_sub_directory_id {
+      display: block !important; /* Show the advanced search fields */
+    }
+  }
 </style>
 
 <%= form_for_filterrific @filterrific, { class: 'filterrific-form', id: 'submission' } do |f| %>
@@ -71,10 +84,11 @@
     <%= f.submit "Search", class: "btn btn-success" %>
   </div>
 
-  <!-- Advanced Search Button -->
-  <!-- <div class="col-md-2 col-sm-12" style="margin: 30px 0px 0px !important">
-    <button type="button" id="advanced-search-btn" class="btn btn-success" style="padding: 6px 12px; margin: 0px;">Advanced Search</button>
-  </div> -->
+ <!-- Advanced Search Button -->
+  <div class="col-md-2 col-sm-12">
+    <button type="button" id="advanced-search-btn" class="btn btn-success" style="padding: 10px 20px; margin: 0;">Advanced Search</button>
+  </div>
+
 
   <!-- Advanced Search fields -->
   <div class="col-md-4 col-sm-6" id="filterrific_search_designation" style= "display:none;">
