--- a/app/views/faculties/_filter_form.html.erb
+++ b/app/views/faculties/_filter_form.html.erb
@@ -85,10 +85,9 @@
   </div>
 
  <!-- Advanced Search Button -->
-  <div class="col-md-2 col-sm-12">
-    <button type="button" id="advanced-search-btn" class="btn btn-success" style="padding: 10px 20px; margin: 0;">Advanced Search</button>
-  </div>
-
+  <!-- <div class="col-md-2 col-sm-12" style="margin: 30px 0px 0px !important">
+    <button type="button" id="advanced-search-btn" class="btn btn-success" style="padding: 6px 12px; margin: 0px;">Advanced Search</button>
+  </div> -->
 
   <!-- Advanced Search fields -->
   <div class="col-md-4 col-sm-6" id="filterrific_search_designation" style= "display:none;">
