--- a/app/views/faculties/_faculty_list.html.erb
+++ b/app/views/faculties/_faculty_list.html.erb
@@ -87,6 +87,9 @@
     color: #fff;
   }
 
+  .unselectable {
+    user-select: none;
+  }
 
 </style>
 <div class="container-fluid">
@@ -173,7 +176,7 @@
                           </div>
                             <div class=row-item>
                             <dt class="col-sm-6 text-start">Email</dt>
-                            <dd class="col-sm-6 text-start"><%= faculty.email || '-' %></dd>
+                            <dd class="col-sm-6 text-start unselectable"><%= faculty.email || '-' %></dd>
                           </div>
                             <div class=row-item>
                             <dt class="col-sm-6 text-start">Personal Webpage</dt>
